[gd_scene load_steps=17 format=3 uid="uid://dgrtvp0jbijme"]

[ext_resource type="PackedScene" uid="uid://dhmfx6u1dmewx" path="res://assets/elevatorNew/elevator.glb" id="1_t1rw0"]
[ext_resource type="Script" path="res://scripts/elevator.gd" id="2_dbg1a"]
[ext_resource type="Material" uid="uid://cr23c5iaojmsl" path="res://assets/materials/elevator.tres" id="2_r01k5"]
[ext_resource type="Material" uid="uid://domyhl0b3cq4d" path="res://assets/materials/elevator_lines.tres" id="3_8s10s"]
[ext_resource type="Material" uid="uid://brnwjocutoqia" path="res://assets/materials/elevator_roof.tres" id="3_gxhwt"]
[ext_resource type="Material" uid="uid://crg6qf2xf3i4n" path="res://assets/materials/light.tres" id="3_wh3wc"]
[ext_resource type="Material" uid="uid://lfs0j28pqnkq" path="res://assets/materials/lightCase.tres" id="4_4f887"]
[ext_resource type="PackedScene" uid="uid://ctlukj8yc6bqt" path="res://assets/NewSafe/safe.tscn" id="7_5xy6e"]
[ext_resource type="AudioStream" uid="uid://xkpj2f8pxrh2" path="res://assets/audio/elevator_ding_door.mp3" id="9_ekif5"]

[sub_resource type="BoxShape3D" id="BoxShape3D_p32j7"]
size = Vector3(0.125, 2.54, 1.78)

[sub_resource type="BoxShape3D" id="BoxShape3D_t0eu8"]
size = Vector3(1.515, 0.085, 1.785)

[sub_resource type="BoxShape3D" id="BoxShape3D_hcaco"]
size = Vector3(5.155, 0.11, 1.885)

[sub_resource type="BoxShape3D" id="BoxShape3D_lm3d0"]
size = Vector3(1.8, 0.07, 1.755)

[sub_resource type="BoxShape3D" id="BoxShape3D_wbhi2"]
size = Vector3(0.095, 2.74, 5.545)

[sub_resource type="BoxShape3D" id="BoxShape3D_5xyw6"]
size = Vector3(4.79, 2.935, 0.11)

[sub_resource type="BoxShape3D" id="BoxShape3D_cqsyb"]
size = Vector3(0.03, 2.67, 1.67)

[node name="elevator" instance=ExtResource("1_t1rw0")]
script = ExtResource("2_dbg1a")

[node name="Cube_070" parent="." index="0"]
surface_material_override/0 = ExtResource("2_r01k5")

[node name="Cube_002" parent="." index="1"]
unique_name_in_owner = true
surface_material_override/0 = ExtResource("2_r01k5")

[node name="StaticBody3D" type="StaticBody3D" parent="Cube_002" index="0"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Cube_002/StaticBody3D" index="0"]
shape = SubResource("BoxShape3D_p32j7")

[node name="light_008" parent="." index="2"]
surface_material_override/0 = ExtResource("3_wh3wc")
surface_material_override/1 = ExtResource("4_4f887")

[node name="Cube_029" parent="." index="3"]
unique_name_in_owner = true
surface_material_override/0 = ExtResource("2_r01k5")

[node name="StaticBody3D2" type="StaticBody3D" parent="Cube_029" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.00380361)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Cube_029/StaticBody3D2" index="0"]
shape = SubResource("BoxShape3D_p32j7")

[node name="Cube_001" parent="." index="6"]
surface_material_override/0 = ExtResource("3_8s10s")
surface_material_override/1 = ExtResource("3_gxhwt")

[node name="Cube_016" parent="." index="7"]
surface_material_override/0 = ExtResource("2_r01k5")

[node name="Cube_017" parent="." index="8"]
surface_material_override/0 = ExtResource("2_r01k5")

[node name="Cube_018" parent="." index="9"]
surface_material_override/0 = ExtResource("2_r01k5")

[node name="Cube_039" parent="." index="10"]
surface_material_override/0 = ExtResource("2_r01k5")
surface_material_override/1 = ExtResource("3_8s10s")

[node name="light_009" parent="." index="11"]
surface_material_override/0 = ExtResource("3_wh3wc")
surface_material_override/1 = ExtResource("4_4f887")

[node name="light_010" parent="." index="12"]
surface_material_override/1 = ExtResource("4_4f887")

[node name="light_011" parent="." index="13"]
surface_material_override/1 = ExtResource("4_4f887")

[node name="light_012" parent="." index="14"]
surface_material_override/1 = ExtResource("4_4f887")

[node name="light_014" parent="." index="15"]
surface_material_override/0 = ExtResource("3_wh3wc")
surface_material_override/1 = ExtResource("4_4f887")

[node name="light_015" parent="." index="16"]
surface_material_override/0 = ExtResource("3_wh3wc")
surface_material_override/1 = ExtResource("4_4f887")

[node name="light_016" parent="." index="17"]
surface_material_override/1 = ExtResource("4_4f887")

[node name="Cube_032" parent="." index="18"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.822, -1.58416, 0)
surface_material_override/0 = ExtResource("2_r01k5")

[node name="StaticBody3D" type="StaticBody3D" parent="Cube_032" index="0"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Cube_032/StaticBody3D" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0328459, 0)
shape = SubResource("BoxShape3D_t0eu8")

[node name="OmniLight3D3" type="OmniLight3D" parent="." index="21"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.73711, 1.07282, 1.88512)
light_color = Color(0.932671, 0.919864, 0.713045, 1)
light_energy = 0.3
shadow_enabled = true
distance_fade_enabled = true
distance_fade_begin = 15.0
distance_fade_shadow = 15.0
omni_range = 3.38748

[node name="OmniLight3D4" type="OmniLight3D" parent="." index="22"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.36891, 1.07282, 1.88512)
light_color = Color(0.932671, 0.919864, 0.713045, 1)
light_energy = 0.3
shadow_enabled = true
distance_fade_enabled = true
distance_fade_begin = 15.0
distance_fade_shadow = 15.0
omni_range = 3.38748

[node name="OmniLight3D5" type="OmniLight3D" parent="." index="23"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.734839, 1.07282, -1.90994)
light_color = Color(0.932671, 0.919864, 0.713045, 1)
light_energy = 0.3
shadow_enabled = true
distance_fade_enabled = true
distance_fade_begin = 15.0
distance_fade_shadow = 15.0
omni_range = 3.38748

[node name="OmniLight3D6" type="OmniLight3D" parent="." index="24"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.35403, 1.07282, -1.92188)
light_color = Color(0.932671, 0.919864, 0.713045, 1)
light_energy = 0.3
shadow_enabled = true
distance_fade_enabled = true
distance_fade_begin = 15.0
distance_fade_shadow = 15.0
omni_range = 3.38748

[node name="OmniLight3D7" type="OmniLight3D" parent="." index="25"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.696887, 1.07282, -0.0803602)
light_color = Color(0.932671, 0.919864, 0.713045, 1)
light_energy = 0.3
shadow_enabled = true
distance_fade_enabled = true
distance_fade_begin = 15.0
distance_fade_shadow = 15.0
omni_range = 3.38748

[node name="safes" type="Node3D" parent="." index="26"]
transform = Transform3D(0.00260059, 0, -0.999997, 0, 1, 0, 0.999997, 0, 0.00260059, 2.643, 0.397, 4.686)

[node name="safe1" parent="safes" index="0" node_paths=PackedStringArray("all_numbers") instance=ExtResource("7_5xy6e")]
transform = Transform3D(-3.86499e-08, 0, 0.951431, 0, 0.951432, 0, -0.951431, 0, -3.86499e-08, -3.80388, -0.0373314, 5.98747)
box_number = "1"
locked = true
all_numbers = NodePath("door/Numbers")

[node name="safe2" parent="safes" index="1" node_paths=PackedStringArray("all_numbers") instance=ExtResource("7_5xy6e")]
transform = Transform3D(-3.91155e-08, 0, 0.951431, 0, 0.951432, 0, -0.951431, 0, -3.91155e-08, -4.26391, -0.0367144, 5.97916)
box_number = "2"
locked = true
all_numbers = NodePath("door/Numbers")

[node name="safe3" parent="safes" index="2" node_paths=PackedStringArray("all_numbers") instance=ExtResource("7_5xy6e")]
transform = Transform3D(-3.95812e-08, 0, 0.951431, 0, 0.951432, 0, -0.951431, 0, -3.95812e-08, -4.7253, -0.0365379, 5.98139)
box_number = "3"
locked = true
all_numbers = NodePath("door/Numbers")

[node name="safe4" parent="safes" index="3" node_paths=PackedStringArray("all_numbers") instance=ExtResource("7_5xy6e")]
transform = Transform3D(-3.95812e-08, 0, 0.951431, 0, 0.951432, 0, -0.951431, 0, -3.95812e-08, -5.18594, -0.0346649, 5.983)
box_number = "4"
locked = true
all_numbers = NodePath("door/Numbers")

[node name="safe5" parent="safes" index="4" node_paths=PackedStringArray("all_numbers") instance=ExtResource("7_5xy6e")]
transform = Transform3D(-3.9814e-08, 0, 0.951432, 0, 0.951432, 0, -0.951432, 0, -3.9814e-08, -5.6451, -0.035242, 5.98454)
box_number = "5"
locked = true
all_numbers = NodePath("door/Numbers")

[node name="safe6" parent="safes" index="5" node_paths=PackedStringArray("all_numbers") instance=ExtResource("7_5xy6e")]
transform = Transform3D(-3.86499e-08, 0, 0.951431, 0, 0.951432, 0, -0.951431, 0, -3.86499e-08, -3.80235, -0.495998, 5.98274)
box_number = "6"
locked = true
all_numbers = NodePath("door/Numbers")

[node name="safe7" parent="safes" index="6" node_paths=PackedStringArray("all_numbers") instance=ExtResource("7_5xy6e")]
transform = Transform3D(-4.00469e-08, 0, 0.951432, 0, 0.951432, 0, -0.951432, 0, -4.00469e-08, -4.26342, -0.489157, 5.97918)
box_number = "7"
locked = true
all_numbers = NodePath("door/Numbers")

[node name="safe8" parent="safes" index="7" node_paths=PackedStringArray("all_numbers") instance=ExtResource("7_5xy6e")]
transform = Transform3D(-4.09782e-08, 0, 0.951432, 0, 0.951432, 0, -0.951432, 0, -4.09782e-08, -4.72544, -0.488619, 5.97781)
box_number = "8"
locked = true
all_numbers = NodePath("door/Numbers")

[node name="safe9" parent="safes" index="8" node_paths=PackedStringArray("all_numbers") instance=ExtResource("7_5xy6e")]
transform = Transform3D(-4.09782e-08, 0, 0.951432, 0, 0.951432, 0, -0.951432, 0, -4.09782e-08, -5.18486, -0.488619, 5.98049)
box_number = "9"
locked = true
all_numbers = NodePath("door/Numbers")

[node name="safe10" parent="safes" index="9" node_paths=PackedStringArray("all_numbers") instance=ExtResource("7_5xy6e")]
transform = Transform3D(-4.02797e-08, 0, 0.951432, 0, 0.951432, 0, -0.951432, 0, -4.02797e-08, -5.64027, -0.489, 5.97937)
box_number = "10"
locked = true
all_numbers = NodePath("door/Numbers")

[node name="safe11" parent="safes" index="10" node_paths=PackedStringArray("all_numbers") instance=ExtResource("7_5xy6e")]
transform = Transform3D(-3.95812e-08, 0, 0.951431, 0, 0.951432, 0, -0.951431, 0, -3.95812e-08, -3.80148, -0.953034, 5.98158)
box_number = "11"
locked = true
all_numbers = NodePath("door/Numbers")

[node name="safe12" parent="safes" index="11" node_paths=PackedStringArray("all_numbers") instance=ExtResource("7_5xy6e")]
transform = Transform3D(-3.9814e-08, 0, 0.951431, 0, 0.951432, 0, -0.951431, 0, -3.9814e-08, -4.26336, -0.952027, 5.98422)
box_number = "12"
locked = true
all_numbers = NodePath("door/Numbers")

[node name="safe13" parent="safes" index="12" node_paths=PackedStringArray("all_numbers") instance=ExtResource("7_5xy6e")]
transform = Transform3D(-4.05125e-08, 0, 0.951432, 0, 0.951432, 0, -0.951432, 0, -4.05125e-08, -4.72503, -0.95291, 5.98579)
box_number = "13"
locked = true
all_numbers = NodePath("door/Numbers")

[node name="safe14" parent="safes" index="13" node_paths=PackedStringArray("all_numbers") instance=ExtResource("7_5xy6e")]
transform = Transform3D(-4.05125e-08, 0, 0.951432, 0, 0.951432, 0, -0.951432, 0, -4.05125e-08, -5.18369, -0.951149, 5.98517)
box_number = "14"
locked = true
all_numbers = NodePath("door/Numbers")

[node name="safe15" parent="safes" index="14" node_paths=PackedStringArray("all_numbers") instance=ExtResource("7_5xy6e")]
transform = Transform3D(-3.81842e-08, 0, 0.95143, 0, 0.951432, 0, -0.95143, 0, -3.81842e-08, -5.64222, -0.951301, 5.98358)
box_number = "15"
locked = true
all_numbers = NodePath("door/Numbers")

[node name="safe8c" parent="safes" index="15" node_paths=PackedStringArray("all_numbers") instance=ExtResource("7_5xy6e")]
transform = Transform3D(-4.14439e-08, 0, 0.951432, 0, 0.951432, 0, -0.951432, 0, -4.14439e-08, -3.84711, -1.79223, 5.9912)
box_number = "13"
all_numbers = NodePath("door/Numbers")

[node name="StaticBody3D" type="StaticBody3D" parent="." index="27"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.740293, -1.63107, 1.84943)

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D" index="0"]
shape = SubResource("BoxShape3D_hcaco")

[node name="StaticBody3D2" type="StaticBody3D" parent="." index="28"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.740293, -1.61883, -1.84815)

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D2" index="0"]
shape = SubResource("BoxShape3D_hcaco")

[node name="StaticBody3D3" type="StaticBody3D" parent="." index="29"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.85091, -1.60138, 0.0142444)

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D3" index="0"]
shape = SubResource("BoxShape3D_lm3d0")

[node name="StaticBody3D4" type="StaticBody3D" parent="." index="30"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.48189, -1.60242, 0.0142444)

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D4" index="0"]
shape = SubResource("BoxShape3D_lm3d0")

[node name="StaticBody3D5" type="StaticBody3D" parent="." index="31"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.18132, 0, -0.0800989)

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D5" index="0"]
shape = SubResource("BoxShape3D_wbhi2")

[node name="StaticBody3D6" type="StaticBody3D" parent="." index="32"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.768949, 0, 2.8369)

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D6" index="0"]
shape = SubResource("BoxShape3D_5xyw6")

[node name="StaticBody3D7" type="StaticBody3D" parent="." index="33"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.768949, 0, -2.84433)

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D7" index="0"]
shape = SubResource("BoxShape3D_5xyw6")

[node name="StaticBody3D8" type="StaticBody3D" parent="." index="34"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.55325, 0, 1.88352)

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D8" index="0"]
shape = SubResource("BoxShape3D_cqsyb")

[node name="StaticBody3D9" type="StaticBody3D" parent="." index="35"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.51487, 0, -1.89363)

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D9" index="0"]
shape = SubResource("BoxShape3D_cqsyb")

[node name="Ding" type="AudioStreamPlayer3D" parent="." index="36"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.543023, 0, 0)
stream = ExtResource("9_ekif5")
volume_db = -10.0
